# voice-ai-intent-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Datasets/: ML Engineer Voice AI takehome assignment Dataset Description
app/: main.py  models.py
models/: labse_logreg_classifier.joblib  labse_logreg_info.joblib
notebooks/: eda.ipynb
src/: __init__.py  classifier.py  config.py  encoder.py
