[project]
name = "voice-ai-intent"
version = "1.0.0"
description = "Intent classification for Rwandan government services Voice AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    # Embeddings
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    # Vector Store
    "qdrant-client>=1.7.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Utilities
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Run with: uvicorn app.main:app --host 0.0.0.0 --port 8000

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
